@@ -1,10 +1,11 @@
-<project name="mps-extensions.allScripts" default="build">
+<project name="de.itemis.mps.extensions.allScripts" default="build">
   <!-- Generated by MPS -->
   <property name="build.dir" location="build" />
-  <property name="build.tmp" location="${build.dir}/tmp/mps-extensions.allScripts" />
-  <property name="build.layout" location="${build.dir}/artifacts/mps-extensions.allScripts" />
+  <property name="build.tmp" location="${build.dir}/tmp/de.itemis.mps.extensions.allScripts" />
+  <property name="build.layout" location="${build.dir}/artifacts/de.itemis.mps.extensions.allScripts" />
   <property name="mps.home" location="${basedir}/../../../../../../../../Applications/MPS 2017.3.app/Contents" />
-  <property name="extensions.code" location="${basedir}/../../code" />
+  <property name="extensions.home" location="${basedir}/.." />
+  <property name="extensions.code" location="${extensions.home}/code" />
   <property name="artifacts.mps" location="${mps.home}" />
   <property name="artifacts.mpsBootstrapCore" location="${mps.home}" />
   <property name="artifacts.IDEA" location="${mps.home}" />
@@ -19,6 +20,7 @@
   <property name="environment" value="env" />
   <property name="env.JAVA_HOME" value="${java.home}/.." />
   <property name="jdk.home" value="${env.JAVA_HOME}" />
+  <property name="mps.generator.skipUnmodifiedModels" value="false" />
   
   <path id="path.mps.ant.path">
     <pathelement location="${artifacts.mps}/lib/ant/lib/ant-mps.jar" />
@@ -28,35 +30,35 @@
   
   <target name="assemble" depends="classes, declare-mps-tasks">
     <mkdir dir="${build.layout}" />
-    <mkdir dir="${build.tmp}/default/de.slisson.mps.all.build.jar" />
-    <mkdir dir="${build.tmp}/default/de.slisson.mps.all.build.jar/META-INF" />
-    <echoxml file="${build.tmp}/default/de.slisson.mps.all.build.jar/META-INF/module.xml">
-      <module namespace="de.slisson.mps.all.build" type="solution" uuid="f1fb7b1c-ce0d-423c-9369-4a661d600029">
+    <mkdir dir="${build.tmp}/default/de.itemis.mps.extensions.build.jar" />
+    <mkdir dir="${build.tmp}/default/de.itemis.mps.extensions.build.jar/META-INF" />
+    <echoxml file="${build.tmp}/default/de.itemis.mps.extensions.build.jar/META-INF/module.xml">
+      <module namespace="de.itemis.mps.extensions.build" type="solution" uuid="f1fb7b1c-ce0d-423c-9369-4a661d600029">
         <dependencies />
         <classpath>
           <entry path="." />
         </classpath>
-        <sources jar="de.slisson.mps.all.build-src.jar" descriptor="de.slisson.mps.all.build.msd" />
+        <sources jar="de.itemis.mps.extensions.build-src.jar" descriptor="de.itemis.mps.extensions.build.msd" />
       </module>
     </echoxml>
-    <jar destfile="${build.layout}/de.slisson.mps.all.build.jar" duplicate="preserve">
-      <fileset dir="${build.tmp}/java/out/de.slisson.mps.all.build" />
-      <fileset dir="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build" includes="icons/**, resources/**" />
-      <fileset dir="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
-      <fileset dir="${build.tmp}/default/de.slisson.mps.all.build.jar" />
+    <jar destfile="${build.layout}/de.itemis.mps.extensions.build.jar" duplicate="preserve">
+      <fileset dir="${build.tmp}/java/out/de.itemis.mps.extensions.build" />
+      <fileset dir="${extensions.code}/build/solutions/de.itemis.mps.extensions.build" includes="icons/**, resources/**" />
+      <fileset dir="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
+      <fileset dir="${build.tmp}/default/de.itemis.mps.extensions.build.jar" />
     </jar>
-    <copyModels todir="${build.tmp}/customProcessors/copyModels/mps-build-solutions-de.slisson.mps.all.build-models">
-      <fileset dir="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/models" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/build-solutions-de.itemis.mps.extensions.build-models">
+      <fileset dir="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/models" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
     </copyModels>
-    <jar destfile="${build.layout}/de.slisson.mps.all.build-src.jar" duplicate="preserve">
-      <fileset dir="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/source_gen">
+    <jar destfile="${build.layout}/de.itemis.mps.extensions.build-src.jar" duplicate="preserve">
+      <fileset dir="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/source_gen">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
         <exclude name="**/checkpoints" />
         <exclude name="**/*.mps" />
       </fileset>
-      <zipfileset file="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/de.slisson.mps.all.build.msd" prefix="module" />
-      <zipfileset dir="${build.tmp}/customProcessors/copyModels/mps-build-solutions-de.slisson.mps.all.build-models" prefix="module/models" />
+      <zipfileset file="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/de.itemis.mps.extensions.build.msd" prefix="module" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/build-solutions-de.itemis.mps.extensions.build-models" prefix="module/models" />
     </jar>
     <echo file="${build.layout}/build.properties">mps.build.number=${mps.build.number}${line.separator}mps.date=${mps.date}${line.separator}mps.build.vcs.number=${mps.build.vcs.number}${line.separator}mps.teamcity.buildConfName=${mps.teamcity.buildConfName}${line.separator}mps.idea.platform.build.number=${mps.idea.platform.build.number}${line.separator}mps.mps.build.counter=${mps.mps.build.counter}${line.separator}mpsBootstrapCore.version=${mpsBootstrapCore.version}</echo>
   </target>
@@ -72,7 +74,7 @@
     <delete dir="${build.layout}" />
   </target>
   
-  <target name="compileJava" depends="java.compile.de.slisson.mps.all.build" />
+  <target name="compileJava" depends="java.compile.de.itemis.mps.extensions.build" />
   
   <target name="processResources" />
   
@@ -84,15 +86,17 @@
   
   <target name="generate" depends="declare-mps-tasks, fetchDependencies">
     <echo message="generating" />
-    <generate strictMode="true" parallelMode="true" parallelThreads="16" useInplaceTransform="true" hideWarnings="false" createStaticRefs="false" fork="true" targetJavaVersion="1.8">
+    <generate strictMode="true" parallelMode="true" parallelThreads="16" useInplaceTransform="true" hideWarnings="false" createStaticRefs="false" fork="true" targetJavaVersion="1.8" skipUnmodifiedModels="${mps.generator.skipUnmodifiedModels}">
+      <plugin path="${artifacts.mps}/plugins/mps-build" />
+      <plugin path="${artifacts.mps}/plugins/mps-core/META-INF/plugin.xml/../.." />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.blTypes.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.classifiers.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.closures.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.collections.jar" />
-      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.extensionMethods.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.javadoc.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.jdk7.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.jdk8.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.regexp.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.regexp.runtime.jar" />
       <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.scopes.jar" />
@@ -106,31 +110,29 @@
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.core.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.dataFlow.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.editor.jar" />
-      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.extension.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.findUsages.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.generator.generationContext.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.generator.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.intentions.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.migration.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.migration.runtime.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.modelapi.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.pattern.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.plugin.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.project.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.quotation.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.refactoring.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.resources.jar" />
-      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.scopes.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.scopes.runtime.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.script.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.sharedConcepts.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.smodel.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.smodel.query.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.structure.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.textGen.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.traceable.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.typesystem.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.refactoring.participant.jar" />
-      <library file="${artifacts.mps}/languages/make/jetbrains.mps.make.reduced.jar" />
-      <library file="${artifacts.mps}/languages/make/jetbrains.mps.tool.gentest.jar" />
       <library file="${artifacts.mps}/languages/text/jetbrains.mps.lang.text.jar" />
       <library file="${artifacts.mps}/languages/xml/jetbrains.mps.core.xml.jar" />
       <library file="${artifacts.mps}/lib/mps-behavior-api.jar" />
@@ -141,9 +143,7 @@
       <library file="${artifacts.mps}/lib/mps-environment.jar" />
       <library file="${artifacts.mps}/lib/mps-openapi.jar" />
       <library file="${artifacts.mps}/lib/mps-platform.jar" />
-      <library file="${artifacts.mps}/lib/mps-stubs.jar" />
-      <library file="${artifacts.mps}/lib/mps-test.jar" />
-      <library file="${artifacts.mps}/lib/mps-tool.jar" />
+      <library file="${artifacts.mps}/lib/mps-references.jar" />
       <library file="${artifacts.mps}/lib/mps-tuples.jar" />
       <library file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.build.jar" />
       <library file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.build.mps.jar" />
@@ -152,13 +152,13 @@
       <library file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.build.workflow.preset.jar" />
       <library file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.ide.build.jar" />
       <chunk>
-        <module file="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/de.slisson.mps.all.build.msd" />
+        <module file="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/de.itemis.mps.extensions.build.msd" />
       </chunk>
       <jvmargs>
         <arg value="-Xmx2024m" />
-        <arg value="-XX:MaxPermSize=1000m" />
       </jvmargs>
       <macro name="mps.home" path="${mps.home}" />
+      <macro name="extensions.home" path="${extensions.home}" />
       <macro name="extensions.code" path="${extensions.code}" />
     </generate>
   </target>
@@ -169,24 +169,24 @@
   
   <target name="makeDependents" />
   
-  <target name="java.compile.de.slisson.mps.all.build">
-    <mkdir dir="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/source_gen" />
-    <mkdir dir="${build.tmp}/java/out/de.slisson.mps.all.build" />
-    <javac destdir="${build.tmp}/java/out/de.slisson.mps.all.build" fork="false" encoding="utf8" includeantruntime="false" debug="true" source="1.8" target="1.8">
+  <target name="java.compile.de.itemis.mps.extensions.build">
+    <mkdir dir="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/source_gen" />
+    <mkdir dir="${build.tmp}/java/out/de.itemis.mps.extensions.build" />
+    <javac destdir="${build.tmp}/java/out/de.itemis.mps.extensions.build" fork="false" encoding="utf8" includeantruntime="false" debug="true" source="1.8" target="1.8">
       <compilerarg value="-Xlint:none" />
       <src>
-        <path location="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/source_gen" />
+        <path location="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/source_gen" />
       </src>
       <classpath>
         <fileset file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.build.workflow.preset.jar" />
       </classpath>
     </javac>
-    <copy todir="${build.tmp}/java/out/de.slisson.mps.all.build">
-      <fileset dir="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/source_gen" excludes="**/*.java" />
+    <copy todir="${build.tmp}/java/out/de.itemis.mps.extensions.build">
+      <fileset dir="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/source_gen" excludes="**/*.java" />
     </copy>
   </target>
   
   <target name="cleanSources">
-    <delete dir="${extensions.code}/mps-build/solutions/de.slisson.mps.all.build/source_gen" />
+    <delete dir="${extensions.code}/build/solutions/de.itemis.mps.extensions.build/source_gen" />
   </target>
 </project>
